--- a/app/styles.module.scss
+++ b/app/styles.module.scss
@@ -1,7 +1,17 @@
 @import './variables.scss';
 
-.pageLayout {
-	//padding: 1rem;
+@font-face {
+	font-family: "Roboto";
+	src: url("/fonts/Roboto-Regular.ttf");
+}
+
+.headerItems {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	font-family: "Roboto";
+	gap: 0.5rem;
+	font-size: 1.25rem;
 }
 
 .searchIcon {
@@ -124,4 +134,13 @@
 			max-width: 100%;
 		}
 	}
+}
+
+.about {
+	padding: map-get($margins, small);
+	@include respond-to(small) {
+		padding: map-get($margins, medium);
+	}
+	color: #fff;
+	font-family: "Roboto";
 }
