--- a/app/globals.scss
+++ b/app/globals.scss
@@ -24,69 +24,35 @@ body {
 
 a {
   text-decoration: none;
-  color: #fff;
+  color: #ddd;
   &:hover {
-    color: #ddd;
+    color: #eee;
   }
 }
 
 header {
-  //border: solid 1px #fff;
+  border: solid 1px #fff;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  //justify-content: center;
   align-items: center;
   padding: map-get($margins, small);
   @include respond-to(small) {
     padding: map-get($margins, medium);
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: baseline;
   }
   color: #fff;
   background-color: map-get($colours, primary);
   opacity: 0.75;
   h1 {
     opacity: 1;
-    //border: solid 2px #0f0;
-    // display: flex;
-    //   flex-direction: row;
-    //   justify-content: center;
-    //   //align-items: flex-end;
-    //   width: 100%;
-    // a {
-    //   border: solid 2px #00f;
-    //   display: flex;
-    //   flex-direction: column;
-    //   align-items: stretch;
-    //   //width: 100%;
-    // }
   }
-  // background-color: #48f;
-  form {
-		display: flex;
-    justify-content: flex-end;
-		align-items: center;
-		//width: 100%;
-    //border: solid 2px #f00;
-    // flex: 0 0 auto;
-		input {
-      // max-width: 50%;
-		  //font-size: 1.5rem;
-			border-radius: 0.5rem;
-			padding: 0.5rem;
-			border: 0;
-      flex: 0 1 auto;
-		}
-	}
 }
 
 h1 {
   font-size: 3em;
-  // @media screen and (min-width: 768px) {
-	// 	font-size: 4em;
-	// }
   font-family: "Microgramma";
   margin: 0;
   padding: 0;
@@ -106,6 +72,7 @@ h2 {
 }
 
 h3 {
+  margin: 0;
   color: #fff;
   font-size: 1.25em;
   font-family: "Microgramma";
@@ -114,6 +81,7 @@ h3 {
 
 ul {
   padding: 0;
+  list-style: none;
 }
 
 button {
