--- a/app/styles.module.scss
+++ b/app/styles.module.scss
@@ -5,16 +5,51 @@
 	src: url("/fonts/Roboto-Regular.ttf");
 }
 
-.headerItems {
+.menuIcon {
+	border: 0;
+	padding: 0;
+	display: block;
+	cursor: pointer;
+	i {
+		font-size: 2rem;
+	}
+	@include respond-to(medium) {
+		display: none;
+	}
+}
+
+.mainDisplay {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem map-get($margins, small);
+    @include respond-to(small) {
+      padding: map-get($margins, medium);
+    }
+    color: #fff;
+    background-color: map-get($colours, primary);
+    opacity: $opacity;
+    h1 {
+      opacity: 1;
+    }
+	.headerItems {
+		display: none;
+		@include respond-to(medium) {
+			display: flex;
+			align-items: flex-end;
+		}
+		font-family: "Roboto";
+		gap: 1.5rem;
+		font-size: 1.25rem;
+	}
+}
+
+.smallDisplay {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	@include respond-to(small) {
-		align-items: flex-end;
-	}
-	font-family: "Roboto";
-	gap: 0.5rem;
-	font-size: 1.25rem;
+	align-items: stretch;
 }
 
 .content {
