--- a/app/styles.module.scss
+++ b/app/styles.module.scss
@@ -95,6 +95,17 @@
 		margin-left: 1rem;
 		font-weight: bold;
 	}
+	figure {
+		padding: 0;
+		margin: 0;
+		margin-bottom: 2rem;
+		display: flex;
+		justify-content: center;
+		img {
+			max-width: 100%;
+			height: auto;
+		}
+	}
 }
 
 .menu {
